added general cnn overview, better normalization of data

--- a/cnn_tutorial_exercise.ipynb
+++ b/cnn_tutorial_exercise.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ab8ca3b3",
    "metadata": {},
    "outputs": [
@@ -58,9 +58,13 @@
     "# Load mnist dataset using tensorflow\n",
     "(x_train, y_train), (x_test, y_test) = tf.keras.datasets.mnist.load_data()\n",
     "\n",
-    "# Normalize input to be between 0 and 1, add channel dimension (1 for grayscale)\n",
-    "x_train = x_train[:, :, :, None] / 255.\n",
-    "x_test = x_test[:, :, :, None] / 255.\n",
+    "mean = np.mean(x_train)\n",
+    "std = np.std(x_train)\n",
+    "# Normalize input to zero mean and unit standard deviation.\n",
+    "# This is good practice for training neural networks to avoid training instabilities.\n",
+    "# Also, add channel dimension (1 for grayscale)\n",
+    "x_train = (x_train[:, :, :, None] - mean) / (std + 1e-12)\n",
+    "x_test = (x_test[:, :, :, None] - mean) / (std + 1e-12)\n",
     "\n",
     "# Visualize some of the data\n",
     "num_images = 10\n",
@@ -144,7 +148,7 @@
     "      x = \n",
     "      # 8. Fully connected layer with `self.output_neurons` outputs, use nn.Dense\n",
     "      x = \n",
-    "      return x\n",
+    "      return x # we do not apply any activation function here, as the loss function will handle it\n",
     "     \n",
     "# 8 output channels for the convolutional layers, \n",
     "# 10 output neurons for the fully connected layer since we have 10 classes in MNIST\n",
@@ -592,7 +596,8 @@
     "# Calculate accuracy on test set\n",
     "result = jnp.argmax(network.apply(params, x_test), axis=-1) # get the predicted labels\n",
     "accuracy = jnp.mean(result == y_test) # calculate the accuracy\n",
-    "print(f\"Test accuracy: {accuracy:.4f}\")"
+    "print(f\"Test accuracy: {accuracy:.4f}\")\n",
+    "# This is already much better than a linear classifier, which would have an accuracy of around 0.92."
    ]
   },
   {
