--- a/cnn_tutorial_exercise.ipynb
+++ b/cnn_tutorial_exercise.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c3d74d11",
    "metadata": {},
    "outputs": [],
@@ -62,6 +62,7 @@
     "std = np.std(x_train)\n",
     "# Normalize input to zero mean and unit standard deviation.\n",
     "# This is good practice for training neural networks to avoid training instabilities.\n",
+    "# This is the simplest form of normalization, but you can also use more advanced techniques like pixel-wise normalization.\n",
     "# Also, add channel dimension (1 for grayscale)\n",
     "x_train = (x_train[:, :, :, None] - mean) / (std + 1e-12)\n",
     "x_test = (x_test[:, :, :, None] - mean) / (std + 1e-12)\n",
