better comments softmax

--- a/cnn_tutorial_exercise.ipynb
+++ b/cnn_tutorial_exercise.ipynb
@@ -420,7 +420,9 @@
     "  # 2. Get the one hot labels of the y_target, use jax.nn.one_hot\n",
     "  one_hot_labels =  # shape (batch_size, 10)\n",
     "  # 3. Get the (normalized) log probabilities from the logits, \n",
-    "  #    use jax.nn.log_softmax (look up its documentation).\n",
+    "  #    use jax.nn.log_softmax (look up its documentation, it's important that you understand the fromula!).\n",
+    "  #    We use jax.nn.log_softmax instead of implementing the softmax manually\n",
+    "  #    because it plays some tricks to avoid overflow/underflow issues in the exponentiation.\n",
     "  normalized_log_probs = # shape (batch_size, 10)\n",
     "  # 4. Calculate the categorical cross entropy loss (look up its definition), use jnp.sum.\n",
     "  loss_all = #shape (batch_size,)\n",
