added bonus exercise resnet/unet

--- a/cnn_tutorial_exercise.ipynb
+++ b/cnn_tutorial_exercise.ipynb
@@ -684,6 +684,16 @@
     "# TODO: Try to play around with the parameters (e.g. layers, channels, ...) and see how it affect the training progress.\n",
     "# Try to get a higher accuracy."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee47f307",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO (more challenging): Implement a ResNet or U-Net (look them up online) and see if you further improve the accuracy."
+   ]
   }
  ],
  "metadata": {
